crates/libs/frieze/tests/ui/enum_tuple_variant_unsupported.rs
use frieze::Schema;

#[derive(Schema)]
enum Event {
    Login(i64),
    Logout,
}

fn main() {}
